--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,11 +22,48 @@
     <string name="text_salad_desc">
         Everyone loves this, so double or even triple the recipe! It vanishes in a flash, and also works well as a salsa. It really is out all-time favorite summer salad.
     </string>
+    <string name="text_salad_ingredients">1/4 cup apple cider vinegar
+        \n2 teaspoons fresh lime juice\n1 tablespoon honey\n1 teaspoon ground cumin\nKosher salt and freshly cracked black pepper
+        \n1/2 small ripe mango, peeled and diced into 1/4 inch pieces
+        \n1 (14.5 ounce) can black beans, drained and rinsed\n1 small jalapeno, seeds and ribs removed, minced
+        \n1 small red onion, cut into small dice\n1/4 cup fresh cilantro leaves, chopped
+    </string>
+    <string name="text_salad_procedures">
+        In a small mixing bowl, combine the vinegar, lime juice, honey, and cumin. Slowly whisk in the oil until incorporated.
+        Season with salt and pepper.\n\nMix the mango, pepper, beans, jalapeno and onion together in a large bowl. Drizzle the
+        vinaigrette over the ingredients and toss to combine. Season the salad with salt and pepper.\n
+    </string>
     <string name="text_soup">Sweet Potato and Lentil Soup with Shiitake Mushrooms</string>
     <string name="text_soup_desc">
         This soup is so good Essy and I ate it ALL the first time I made it. If someone is hesitant about plant-based food, this has to be a convincer.
     </string>
+    <string name="text_soup_ingredients">1 leek, thinly sliced, white only\n6 garlic cloves, minced
+        \n2 cups fresh (about 3.5 ounces) or dried shiitake mushrooms, sliced (soak dried shiitakes for 1/2 hour in warm water before slicing)
+        \n4 cups low sodium vegetable broth\n2 cups water\n1 1/2 cups red lentils\n1 large sweet potato, scrubbed and diced, skin okay to use
+        \n1 bay leaf\n1/4 cup basil or more\nPepper to taste\nFresh spinach
+    </string>
+    <string name="text_soup_procedures">
+        1. In a large pan, stir-fry leek, mushrooms and garlic for 3-4 minutes until leeks are soft.
+        \n2. Stir in broth, water, lentils, sweet potato, and bay leaf.
+        \n3. Bring to boil the simmer uncovered until lentils and sweet potatoes are soft, about 30 to 40 minutes.
+        \n4. Remove bay leaf and puree 2 cups of soup until smooth or use an immersion blender; return to pot, stir in basil and pepper to taste.
+        \n5. Just before serving, stir in as much as you dare fresh spinach. It will melt in the pot. If you prefer fill individual soup
+        bowls with spinach and spoon hot soup over the spinach. Top with a sprinkle of more fresh basil.
+    </string>
     <string name="text_mousse">Lime Mousse</string>
     <string name="text_mousse_desc">This is a FABULOUS alone, topped with fruit of any kind or as a frosting on cake.
         It is fast to make at the last minute. Use more or less lime according to taste.</string>
+    <string name="text_mousse_ingredients">6 tablespoons unsalted butter, room temperature
+        \n2 large eggs, plus 2 egg yolks\n2 tablespoons fresh lime juice\n1 1/2 cups heavy cream\n1 1/3 cups sugar
+        \n1/2 cup fresh lemon juice\n1 teaspoon grated lemon zest, plus more garnish
+    </string>
+    <string name="text_mousse_procedures">
+        1. Make lemon curd: In a medium saucepan, whisk together butter, 1 cup sugar, eggs, yolks, and lemon and lime juices
+        (mixture may appear curdled). Place over low heat; cook, stirring, until smooth, 4 to 5 minutes. Raise heat to medium;
+        cook, stirring constantly, until thick enough to coat back of spoon, 4 to 8 minutes (do not boil)
+        \n2. Remove pan from heat; stir in lemon zest. Transfer mixture to a bowl; cover with plastic wrap, and chill at least 1 hour.
+        \n3. In a mixing bowl, beat cream and remaining 1/3 cup sugar to soft peaks. Whisk lemon curd to loosen,
+        then gently fold in whipped cream. Spoon into 6 glasses. Cover; chill at least 2 hours and up to 3 days.
+        Just before serving, garnish with zest.
+    </string>
 </resources>
